--- a/sample_app/test/fixtures/users.yml
+++ b/sample_app/test/fixtures/users.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  email: "eewcee@163.com"
-  name: "cares"
+# one:
+#   email: "eewcee@163.com"
+#   name: "cares"
 
-two:
-  email: "test@11.com"
-  name: "santefee"
+# two:
+#   email: "test@11.com"
+#   name: "santefee"
