finish sign in and sign out

--- a/sample_app/test/fixtures/users.yml
+++ b/sample_app/test/fixtures/users.yml
@@ -7,3 +7,7 @@
 # two:
 #   email: "test@11.com"
 #   name: "santefee"
+michael:
+  name: whocares
+  email: eewcee@163.com
+  password_digest: <%= User.digest('1') %>
